--- a/web_client_workspace/04_jquery/08_css.html
+++ b/web_client_workspace/04_jquery/08_css.html
@@ -129,7 +129,7 @@
     <h2>animate</h2>
     <input type="button" value="실행" onclick="test7();" />
 
-    <!-- <div class="box" id="box1"></div> -->
+    <div class="box" id="box1"></div>
 
 
     <style>
