--- a/web_client_workspace/04_jquery/index.html
+++ b/web_client_workspace/04_jquery/index.html
@@ -19,6 +19,11 @@
         <li><a href="06_jquery_api.html">jquery API</a></li>
         <li><a href="07_dom.html">DOM 제어</a></li>
         <li><a href="08_css.html">CSS</a></li>
+        <li><a href="@실습문제_03_method_실습.html">@실습문제_03_method</a></li>
+        <li><a href="@실습문제_04_event_실습.html">@실습문제_04_event</a></li>
+
+
+
 
 
 
