--- a/web_client_workspace/namyunji/01_introduce.html
+++ b/web_client_workspace/namyunji/01_introduce.html
@@ -45,6 +45,8 @@
         }
     </style>
 
+    <img width="1000px" src="img/introduction/01-bg-cover.png" alt="">
+
     <article>
         <img src="" alt="">
     </article>
