--- a/web_client_workspace/namyunji/04_login.html
+++ b/web_client_workspace/namyunji/04_login.html
@@ -8,6 +8,9 @@
 
     <title>register</title>
     <style>
+        body {
+            background: rgb(rgb(224, 219, 202));
+        }
         table#login{
             border-spacing:10px;
             width: 500px;
@@ -23,14 +26,16 @@
             }
         </style>
     </head>
+
+
     <body>
         <div id="logo">
             <a href="index.html">
-                <img src="img/index/logo.png" style="width: 225px;">
+                <img src="img/index/logo.png" style="width: 225px;" >
             </a>
         </div>
 
-        <form action="javascript:alert('로그인되었습니다.');" name="memberFrm" style="height: 50px;">
+        <form action="javascript:alert('로그인 되었습니다.');" name="memberFrm" style="height: 50px;" method="post" onsubmit="submit();" method="POST">
         <table id="login">
                 <tr>
                     <td>
@@ -50,11 +55,11 @@
                 </tr>
                 <tr>
                     <td style="text-align: center;">
-                        <a href="05_register.html" style="text-decoration: none; color: rgb(168, 168, 14); font-size: 20px;">Register</a>
+                        <a href="05_register.html"><input type="button" value="(or) REGISTER" style="width: 308px; height: 42px; letter-spacing: 1.2px; background-color: rgb(236, 234, 228);"></a>
                     </td>
                 </tr>
             </table>
         </form>
-    
+
 </body>
 </html>
