--- a/web_client_workspace/namyunji/05_register.html
+++ b/web_client_workspace/namyunji/05_register.html
@@ -7,22 +7,33 @@
     <script src="js/jquery-3.6.0.js"></script>
     <title>register</title>
     <style>
+        body {
+            background: rgb(rgb(224, 219, 202));
+
+        }
         table#tbl-entry{
             border-spacing:10px;
-            width: 500px;
             margin: 0 auto;
             text-align: center;
-            transform: translate(80px, 75px);
+            transform: translateY(40px);
         }
         #logo {
                 position: relative;
-                transform: translateY(85px);
+                transform: translateY(55px);
                 text-align: center;
             }
         td{
             color:rgb(59, 59, 55);
             text-align: left;
         }
+
+        #admin-mode {
+                font-size: 18px;
+                margin: 0 auto;
+                text-align: center;
+                transform: translateY(90px);
+                color: grey;
+            }
         </style>
     </head>
     <script>
@@ -39,7 +50,6 @@
             </a>
         </div>
 
-        <!-- <form action="javascript:alert('회원가입 완료되었습니다.');" name="memberFrm" style="height: 50px;"> -->
         <form action="javascript:saveEntry();" name="entryFrm">
         <table id="tbl-entry">
                 <tr>
@@ -97,20 +107,25 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="text-align: center;">
-                        <a href="05_register.html" style="text-decoration: none; color: rgb(168, 168, 14); font-size: 20px;">Login</a>
+                    <td>
+                        <a href="04_login.html"><input type="button" value="(or) LOGIN" style="width: 308px; height: 42px; letter-spacing: 1.2px; background-color: rgb(236, 234, 228);"></a>
                     </td>
                 </tr>
             </table>
         </form>
 
-        <a href="#admin">관리자모드</a>
+        <p id="admin-mode" onclick="admin();" style="font-family: '굴림체';">관리자모드</p>
 
-        <p onclick="admin();">관리자모드</p>
-
+        
         <script>
+         var re = new RegExp("^[a][b][c][1][2][3]$");
+         
             function admin(){
+            var adminPwd = prompt("관리자 암호를 입력하세요");
+            if(re.test(adminPwd))
             showEntries();
+            else
+            alert("관리자 암호가 맞는지 확인하세요.");
             };
 
         </script>
@@ -136,33 +151,20 @@
             var jsonEntries = JSON.stringify(entries);
             localStorage.setItem("entries", jsonEntries);
             document.entryFrm.reset();
-            showEntries();
+            alert("회원가입 완료되었습니다.");
             }
 
 
             function showEntries(){
-            // localStorage.entries가 가져와지거나 아니면 []빈 배열 할당
-            // 문자열이 넘어오기 때문에
-            var entries = JSON.parse(localStorage.getItem("entries")) || [];
-            // 없는 경우를 위해 [] 빈배열 추가
 
-            // 테이블을 가져옴
+            var entries = JSON.parse(localStorage.getItem("entries")) || [];
+
             var $table = $("#tbl-entry");
 
-            // 헤더 추가
             $table.html("<tr><th>No</th><th>아이디</th><th>비밀번호1</th><th>비밀번호2</th><th>이름</th><th>휴대폰</th></tr>");
 
-            // entries배열에 무언가 들어있거나, 아무것도 안들어있거나 할텐데
-            // 그것을 분기처리
-
-            // length가 있으면 true
-            // 방명록 요소가 있을 경우
-            // 저장된 entry가 있는 경우
-            // 배열의 요소를 하나씩
             if(entries.length) {
                 $.each(entries, function(i, entry){
-                    // 한행한행마다 tr태그를 만들고 추가
-                    // var $tr = $("<tr></tr>");
                     var $tr = $("<tr>");
                     $tr
                         .append("<td>" + (i + 1) + "</td>")
@@ -172,11 +174,9 @@
                         .append("<td>" + entry.name + "</td>")
                         .append("<td>" + entry.mobile + "</td>")
 
-                        // 이러면 한 행이 만들어짐
-                        // 한 행을 table에 추가
+
                         .appendTo($table);
                 });
-            // length가 0이면 false
             }
             else {
                 $table.append("<tr><td colspan='3'>조회된 회원목록이 없습니다.</td></tr>");
