--- a/web_client_workspace/05_html5api/web_storage.html
+++ b/web_client_workspace/05_html5api/web_storage.html
@@ -14,7 +14,7 @@
     <!-- https://caniuse.com/ -->
     <!-- 
         client(browser)에 사용자데이터를 저장하는 html5의 표준 api
-        (표준 : 다른 것을 별도로 설치하거나, 가져올 필요없이 바로 사용 가능)
+        (표준 : 다른 것을 별도로 설치S하거나, 가져올 필요없이 바로 사용 가능)
 
         WebStorage의 준비된 객체 두개
         1. sessionStorage
@@ -23,6 +23,8 @@
         2. localStorage
         만료기간 없이 세션 종료후에도 삭제전까지 데이터가 기록됨
 
+
+        S
         사용방법은 동일함
 
         Cookie기술과 차별점 (사용자 데이터를 서버로 전송함)
