--- a/web_client_workspace/namyunji/04_login.html
+++ b/web_client_workspace/namyunji/04_login.html
@@ -7,6 +7,8 @@
     <script src="js/jquery-3.6.0.js"></script>
 
     <title>register</title>
+    
+</head>
     <style>
         body {
             background: rgb(rgb(224, 219, 202));
