--- a/web_server_workspace/01_helloweb/WebContent/index.html
+++ b/web_server_workspace/01_helloweb/WebContent/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>helloweb</title>
+<meta charset="UTF-8">
+<title>helloweb</title>
 </head>
 <body>
-    <h1>helloweb</h1>
-    <p>안녕!</p>
-	<hr />
+	<h1>helloweb</h1>
+	<p>안녕~</p>
+	<hr/>
 	
 	<ul>
-	<!-- ctrl+shift+ / - 주석 사용법 -->
-	<!-- context path -->
-	<!-- http://localhost:9090/web/servlet/testPerson1.html -->
-	<!-- 404오류 : Not Found - 요청한 자원이 존재하지 않을 때 -->
-	<!-- browser(client) 절대주소 작성시, 반드시 context-path부터 작성할 것
-						 localhost:9090이후를 찾게된다 -->
-	<!-- context path 이후의 경로를 WebContent 폴더에서 찾게된다. -->
-		<li><a href="/web/servlet/testPerson1.html">개취검사 - GET | POST</a></li>
-		<li><a href="/web/servlet/testPerson2.html">개취검사 - jsp</a></li>
+	 <!-- 절대경로(주소)를 사용함
+		    절대주소) / 로 시작
+		  cf. 상대주소) ./ 사용 또는 ./없이 바로 시작 -->
+		 
+	 <!-- browser (client) 절대주소 작성시, 반드시 context-path부터 작성할것.
+	 	  localhost:9090 가 자동으로 작성된다.
+	 	  (= 쓰진 않아도, 자동으로 앞에 localhost:9090이 붙음) -->
+	 <!-- context path이후의 경로를 WebContent폴더에서 찾게된다. -->
+		<li><a href="/web/servlet/testPerson1.html">개취검사 - GET</a></li>
 	</ul>
 </body>
 </html>
