--- a/web_server_workspace/01_helloweb/WebContent/servlet/testPerson1.html
+++ b/web_server_workspace/01_helloweb/WebContent/servlet/testPerson1.html
@@ -5,11 +5,12 @@
 <title>개인 취향 테스트</title>
 </head>
 <body>
-	<h2>개인 취향 테스트(GET)</h2>
+	<h2>개인 취향 테스트(GET | POST)</h2>
 	당신의 취향을 테스트 합니다.<br/>
 	데이터 입력후 확인 버튼을 누르세요<br/>
 	
-	<form name="personFrm" action="/web/testPerson1.do" method="get"> 
+	<!-- 절대주소, get방식 | post방식 -->
+	<form name="personFrm" action="/web/testPerson1.do" method="post"> 
 	 <ul style="list-style: none; line-height: 200%;">
 		<li>이름은? 
 			<input type="text" name="name" size="10" required/>
