--- a/web_server_workspace/01_helloweb/WebContent/index.html
+++ b/web_server_workspace/01_helloweb/WebContent/index.html
@@ -18,7 +18,9 @@
 	 	  localhost:9090 가 자동으로 작성된다.
 	 	  (= 쓰진 않아도, 자동으로 앞에 localhost:9090이 붙음) -->
 	 <!-- context path이후의 경로를 WebContent폴더에서 찾게된다. -->
-		<li><a href="/web/servlet/testPerson1.html">개취검사 - GET</a></li>
+		<li><a href="/web/servlet/testPerson1.html">개취검사 - GET | POST</a></li>
+		<li><a href="/web/servlet/testPerson2.html">개취검사 - jsp</a></li>
+		<li><a href="/web/menu/menu.jsp">@실습문제 - menu</a></li>
 	</ul>
 </body>
 </html>
