--- a/web_server_workspace/01_helloweb/WebContent/index.html
+++ b/web_server_workspace/01_helloweb/WebContent/index.html
@@ -9,6 +9,7 @@
 	<p>안녕~</p>
 	<hr/>
 	
+	<h2>servlet</h2>
 	<ul>
 	 <!-- 절대경로(주소)를 사용함
 		    절대주소) / 로 시작
@@ -21,6 +22,12 @@
 		<li><a href="/web/servlet/testPerson1.html">개취검사 - GET | POST</a></li>
 		<li><a href="/web/servlet/testPerson2.html">개취검사 - jsp</a></li>
 		<li><a href="/web/menu/menu.jsp">@실습문제 - menu</a></li>
+	</ul>
+	
+	<h2>jsp</h2>
+	<ul>
+		<li><a href="/web/jsp/basic.jsp">jsp basic</a></li>
+		<li><a href="/web/jsp/include.jsp">jsp - include 지시어</a></li>
 	</ul>
 </body>
 </html>
